# obsidian-to-bookstack

./: .gitignore  LICENSE  README.md  conf.toml  dev_conf.toml  pyproject.toml
obsidian_to_bookstack/: __main__.py  config.py  utils.py
obsidian_to_bookstack/bookstack/: Book.py  Bookstack.py  Page.py  Shelf.py  __init__.py  artifacts.py  bookstack.py  client.py  constants.py
obsidian_to_bookstack/bookstack/collectors/: collector.py
obsidian_to_bookstack/bookstack/collectors/local/: BookCollector.py  ChapterCollector.py  PageCollector.py  ShelfCollector.py  __init__.py
obsidian_to_bookstack/bookstack/collectors/remote/: RemoteBookCollector.py  RemoteChapterCollector.py  RemotePageCollector.py  RemoteShelfCollector.py  __init__.py
obsidian_to_bookstack/obsidian/: Vault.py  __init__.py
obsidian_to_bookstack/sqllite/: DatabaseFunctions.py
