
[project]
name = "obsidian_to_bookstack"
version = "0.1.0"
description = ""
authors = [
    {name = "Jayden Pyles", email = "jpylesbusiness@gmail.com"},
]
dependencies = [
    "toml>=0.10.2",
    "urllib3>=2.1.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
